# bewise.ai

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
bewise/: database.py  main.py  settings.py
bewise/questions/: models.py  router.py  service.py  shemas.py
