[tool.poetry]
name = "bewise"
version = "0.1.0"
description = ""
authors = ["savosinvitali <savosinvitali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
psycopg = {extras = ["binary"], version = "^3.1.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
