[tool.poetry]
name = "bewise"
version = "0.1.0"
description = ""
authors = ["savosinvitali <savosinvitali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
psycopg = {extras = ["binary"], version = "^3.1.12"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
mypy = "^1.6.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
